test/errors/parameterized_types_error/zs/referenced_builtin_type_error.zs
package referenced_builtin_type_error;

subtype uint32 Item;

struct ItemHolder
{
    uint32          version;
    Item(version)   item;
};
